<resources>
    <string name="app_name">Weatherawy</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="weather_image">Weather Image</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">Cloud</string>
    <string name="location">%1$s, %2$s</string>
    <string name="temperature">%1$d°</string>
    <string name="location_icon">Location Icon</string>
    <string name="current_weather_icon">Current Weather Icon</string>
    <string name="air_icon">Air Icon</string>
    <string name="humidity_icon">Humidity Icon</string>
    <string name="pressure_icon">Pressure Icon</string>
    <string name="cloud_icon">Cloud Icon</string>
    <string name="today">Today</string>
    <string name="weather_time_icon">Current Weather Time Icon</string>
    <string name="location_header">Location</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="GPS">GPS</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="notifications">Notifications</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="we_can_t_fetch_your_location">We can\'t fetch your location.</string>
    <string name="please_allow_application_to_access_your_location">Please allow application to access your location</string>
    <string name="allow">Allow</string>
    <string name="upcoming_days">Upcoming Days</string>
    <string name="minAndMaxTemp">%1$d/%2$d°</string>
    <string name="units_of_measurements">Units of Measurements</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="standard">Standard</string>
    <string name="add_place_to_favorites">Add Place to Favorites</string>
    <string name="save">Save</string>
    <string name="remove_favorite_place_button">Remove favorite place button</string>
    <string name="delete_selected_place">Delete selected place?</string>
    <string name="selected_place_will_be_permanently_removed_from_favorites">Selected place will be permanently removed from favorites.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="notifications_summary_on">You will no longer receive notifications</string>
    <string name="notifications_summary_off">You will receive all notifications</string>
    <string name="application_language">Application language</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="get_location_from">Get location from</string>
    <string name="no_favorite_places">No Favorite Places</string>
    <string name="add_alert_button">Add Alert Button</string>
    <string name="no_alerts">No Alerts</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="alarm">Alarm</string>
    <string name="temperature_header">Temperature</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="can_t_add_to_favorite_while_internet_is_not_available">Can\'t add to favorite while internet is not available</string>
    <string name="delete_selected_alert">Delete selected alert?</string>
    <string name="selected_alert_will_be_permanently_removed_and_you_won_t_get_notified_of_the_weather_details_at_that_time">Selected alert will be permanently removed and you won\'t get notified of the weather details at that time.</string>
    <string name="select_date">Select Date:</string>
    <string name="press_to_select_a_date">Press to select a date</string>
    <string name="select_time">Select Time:</string>
    <string name="press_to_select_a_time">Press to select a time</string>
    <string name="you_have_lost_connection_to_the_internet_nthis_app_is_offline">You have lost connection to the internet\nThis app is offline.</string>
    <string name="internet_not_connected_icon">Internet not connected icon</string>
    <string name="internet_is_not_available">Internet is not available</string>
    <string name="please_enable_internet_to_view_your_favorite_places">Please enable internet to view your favorite places.</string>
    <string name="enable">Enable</string>
    <string name="location_isn_t_enabled">Location isn\'t enabled</string>
    <string name="please_enable_location_to_select_one_from_the_map">Please enable location to select one from the map.</string>
    <string name="this_channel_is_specialized_in_receiving_weather_alerts">This channel is specialized in receiving weather alerts.</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="couldn_t_find_address_for_the_marked_point_please_choose_another_one">Couldn\'t find address for the marked point. Please choose another one.</string>
    <string name="current_weather_at_is">Current weather at %1$s is %2$s</string>
    <string name="please_select_both_date_and_time_to_continue">Please select both date and time to continue</string>

</resources>