<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_location"
        app:title="@string/location_header">

        <ListPreference
            app:defaultValue="map"
            app:entries="@array/location_entries"
            app:entryValues="@array/location_values"
            app:key="location"
            app:title="@string/get_location_from"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_language"
        app:title="@string/language">

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/application_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_location"
        app:title="@string/units_of_measurements">

        <ListPreference
            app:defaultValue="metric"
            app:entries="@array/units_entries"
            app:entryValues="@array/units_values"
            app:key="units"
            app:title="@string/get_units_in"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <PreferenceCategory
        app:icon="@drawable/ic_notifications"
        app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:summaryOff="@string/notifications_summary_off"
            app:summaryOn="@string/notifications_summary_on"
            app:title="@string/disable_notifications" />

    </PreferenceCategory>

</PreferenceScreen>