<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_header"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/mapChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/map" />

        <com.google.android.material.chip.Chip
            android:id="@+id/gpsChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/GPS" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView2"
        style="@style/ChipHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/language" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/englishChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/english" />

        <com.google.android.material.chip.Chip
            android:id="@+id/arabicChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/arabic" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView3"
        style="@style/ChipHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/temperature_header" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/celsiusChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/celsius" />

        <com.google.android.material.chip.Chip
            android:id="@+id/kelvinChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/kelvin" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fahrenheitChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView4"
        style="@style/ChipHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wind_speed" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/meterPerSecChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/meter_sec" />

        <com.google.android.material.chip.Chip
            android:id="@+id/milePerHourChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/mile_hour" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView5"
        style="@style/ChipHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/notifications" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/enabledSecChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/enabled" />

        <com.google.android.material.chip.Chip
            android:id="@+id/disabledHourChip"
            style="@style/ChipStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/disabled" />
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>