<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?colorSurfaceContainerHigh"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/select_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/selectDateBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_background"
            android:text="@string/press_to_select_a_date" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/select_time"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/selectTimeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_background"
            android:text="@string/press_to_select_a_time" />

        <Button
            android:id="@+id/alertSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/save" />

    </LinearLayout>
</layout>